começando produtos e footer finalizado

--- a/src/componentes/Header2/style.css
+++ b/src/componentes/Header2/style.css
@@ -1,4 +1,4 @@
-main {
+.home-header {
     background-image: url(../../imagens/fundo.png);
     min-height: 100vh;
     background-position: right center;
@@ -13,15 +13,8 @@ main {
     padding: 15px 0;
 }
 
-h1 {
-    font-size: 3rem;
-    color: white;
-  }
-
-  h3 {
-      color:white;
-
-  }
-  h5 {
-      color: white;
-  }
+.botao-whats{
+    background-color: #32CD32;
+    color: #fff;
+     font-family:"Century Gothic";
+}
