--- a/src/componentes/Header2/style.css
+++ b/src/componentes/Header2/style.css
@@ -14,7 +14,21 @@
 }
 
 .botao-whats{
-    background-color: #32CD32;
-    color: #fff;
-     font-family:"Century Gothic";
-}
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 14px;
+        color: #ff6118;
+        padding: 10px 20px;
+        background: linear-gradient(
+            top,
+            #ffffff 0%,
+            #ffffff 50%,
+            #d6d6d6);
+        border-radius: 10px;
+        border: 2px solid #ff6118;
+        box-shadow:
+            0px 1px 3px rgba(000,000,000,0.5),
+            inset 0px 0px 3px rgba(255,255,255,1);
+        text-shadow:
+            0px -1px 0px rgba(000,000,000,0.1),
+            0px 1px 0px rgba(255,255,255,1);
+    };
