adicionando ultimos componentes

--- a/src/componentes/Nav/Menu/styles.css
+++ b/src/componentes/Nav/Menu/styles.css
@@ -1,14 +1,15 @@
+
 .navbar-menu__botao {
     cursor: pointer;
     letter-spacing: 2px;
     text-transform: uppercase;
     padding: 0.5rem;
-    border: 1px solid #FF6018;
+    border: 3px solid #FF6018;
     border-radius: 5px;
   }
   
   .navbar-menu__botao--aberto:after {
-    content: "";
+    text-transform: uppercase;
     position: fixed;
     top: 0;
     right: 0;
