--- a/src/componentes/Nav/style.css
+++ b/src/componentes/Nav/style.css
@@ -5,7 +5,7 @@
     flex: 0 60px;
     min-height: 80px;
     padding: 0;
-    color:#FF6018;
+    color:rgb(129, 67, 38);
     background-color:black;
     position: fixed; 
     top: 0; 
