--- a/src/componentes/Nav/style.css
+++ b/src/componentes/Nav/style.css
@@ -36,5 +36,9 @@
   }
   
   .navbar-links__ativo {
-    border-bottom: 2px solid black;
+    border-bottom: 2px;
+  }
+
+  a {
+    color: black;
   }
